syntax = "proto3";

package pb;

import "user.proto";


option go_package = "user-service/pb";

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message CreateUserResponse {
    User user = 1;
}